[project]
name = "eventyay-bitpay"
dynamic = ["version"]
description = "This plugin allows accepting crypto currency payments in eventyay via BitPay-compatible payment providers."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["Eventyay-tickets"]
authors = [
    {name = "eventyay team", email = "support@eventyay.com"},
]
maintainers = [
    {name = "eventyay team", email = "support@eventyay.com"},
]

dependencies = [
    "btcpay-python",
]

[project.entry-points."pretix.plugin"]
eventyay_bitpay = "eventyay_bitpay:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-bitpay"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "eventyay_bitpay.__version__"}

[tool.setuptools.packages.find]
include = ["eventyay_bitpay*"]
namespaces = false
